[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "cpeg-472-672-hw3-olivia"
version = "0.1.0"
[tool.poetry.dependencies]
pycrypto = "^2.6"
python = "^3.7"
[tool.poetry.dev-dependencies]
